
[package]
name = "dynode"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
config = { version = "0.14.0" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.114" }
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "net",
] }
bytes = { version = "1.6.0" }
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
hyper-tls = { version = "0.6.0"}
http-body-util = { version = "0.1.2" }
futures = "0.3.30"
