
[package]
name = "dynode"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
config = { version = "0.14.0", features = ["yaml"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.117" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "rt"] }
bytes = { version = "1.6.0" }
hyper = { version = "1.3.1", features = ["server"] }
hyper-util = { version = "0.1.5", features = ["client-legacy", "http1"] }
hyper-tls = { version = "0.6.0" }
http-body-util = { version = "0.1.2" }
futures = { version = "0.3.30" }
prometheus-client = { version = "0.22.2" }
