[package]
name = "dynode"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
config = { version = "0.15.11", features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "rt"] }
bytes = { version = "1.10.1" }
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = { version = "0.1.11", features = ["client-legacy", "http1"] }
hyper-tls = { version = "0.6.0" }
http-body-util = { version = "0.1.3" }
futures = { version = "0.3.31" }
prometheus-client = { version = "0.23.1" }
primitives = { git = "https://github.com/gemwalletcom/core.git", rev = "24095bc" }
regex = { version = "1.11.1" }